google analytics on index

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	    <link rel="stylesheet" href="css/style.css">
 	    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 	    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		G-1G6RZM7D2X
     </head>
 	
 		<body>
