--- a/shop.html
+++ b/shop.html
@@ -94,9 +94,9 @@
 			</div>
 			<div class="col-sm-3">
 	  				<div class="card" style="width: 100%;">
-				  <img src="css/img/beetee.jpg" class="card-img-top" alt="...">
+				  <img src="css/img/fungo.jpg" class="card-img-top" alt="...">
 				  <div class="card-body">
-				    <h5 class="card-title">Sottobosco SweatShirt</h5>
+				    <h5 class="card-title">Pocket Square Tee </h5>
 				    <a href="warning.html" class="btn btn-primary">Add to cart</a>
 				  </div>
 				</div>
