--- a/warning.html
+++ b/warning.html
@@ -15,6 +15,15 @@
 	    <link rel="stylesheet" href="css/stylew.css">
 	    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 	    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1G6RZM7D2X"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1G6RZM7D2X');
+</script>
     </head>
     </head>
 	
