--- a/shop.html
+++ b/shop.html
@@ -96,7 +96,7 @@
 	  				<div class="card" style="width: 100%;">
 				  <img src="css/img/heartsweat.jpg" class="card-img-top" alt="...">
 				  <div class="card-body">
-				    <h5 class="card-title">Bloom Anyway SweatShirt</h5>
+				    <h5 class="card-title">BloomAnywaySweat</h5>
 				    <a href="warning.html" class="btn btn-primary">Add to cart</a>
 				  </div>
 				</div>
