--- a/documentazione.html
+++ b/documentazione.html
@@ -1,7 +1,48 @@
 <!doctype html>
-<head>
-
-
-
-
+<!doctype html>
+<html lang="eng" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>CLOTHO DESIGN</title>
+			<body>
+				<p><strong>ABSTRACT:</strong> <br>Clotho è il sito che ho costruito come vetrina per i prodotti che realizzo con il ricamo. Nel sito ho voluto unire due funzioni che on-line ho trovato soltanto separate, cioè un e-commerce da cuii vendere direttamente i prodotti listati e ideati da me e una sezione aperta in cui i possibili clienti posssono descrivere descrivere richieste per design personalizzati o inviare un'immagine su cui basarsi per ideare un progetto.</p>
+				<p><strong>BENCHMARKING:</strong></p>
+				<p><strong>obbiettivi</strong>creare uno shop funzionante legato alla pagina instagram attraverso cui vendere i miei prodotti </p>
+				<p><strong>target utenti</strong>
+					donne e uomini fra 20 e 40 anni, interessati a dacquistare prodotti personalizzati e handmade</p>
+				<p><strong>competitors</strong> 
+					siti e-commers:
+					http://www.embroiderystore.it/<br>
+					https://embroiderindie.bigcartel.com/<br>
+					https://alliembroidery.com/<br>
+					pagine :
+					https://www.instagram.com/feli.doesthings/<br>
+					https://www.instagram.com/flynn_and_mabel/<br>
+					https://www.instagram.com/kry.embroidery/<br>
+					https://www.instagram.com/volantsvolant/<br>
+				</p>	
+				<br>
+				<strong>STRUTTURA E LAYOUT:</strong><br>
+				<p><strong>architettura del sito:</strong><br>
+					<img src="css/img/schema.jpg"></p>
+				<p><strong>Wireframe:</strong><br>
+					<img src="css/img/schermataindex.jpg">
+					<img src="css/img/schermatashop.jpg">
+				</p>
+				<p><strong>look and feel:</strong><br>font:Quicksand in weight 300& 500<br> color: #E1D7C6 background,#1B180A text & icons, img originali</p>
+				<p><strong>linguaggi e strumenti:</strong>Linguaggi: HTML e CSS <br> Supporti: bootsstrap, github, lightroom, canva, fontawsome,color name finder, google analytics, favicon, google fonts,coolors</p>
+				<p><strong>COMUNICATION STRATEGY:</strong> 
+				On-line sono presenti moltissime pagine di artigianato e ricamo simili alla mia che pero si dividono in due approcci alla vendita del prodotto. Alcuni creators hannocreato dei siti e-commerce a cui accedere, atraverso instagram o il web, per acquistare o si appoggiano direttamente a etzy come supporto alla vendita. Mentre altri non hanno un supporto alla vendita ma creano soltanto lavori su commissione utilizzando i dm di instagram per comunicare con i possibili clienti.
+				L'obbiettivo del mio sito è raggruppare le funzionalità che negli esempi che ho trovato on line sono separati su dievrse piattaforme e supporti. Quindi avere un unico sito che raggruppi shop con e-commerce e form su cui richiedere personalizzazioni senza perdere utenti nel passaggio fra pagina instagram, e-commerce o etzy.<br>
+				 </p>
+				
+				<p><strong>Target audience:</strong><br>L'audience a cui punta il mio sito sono donne e uomini fra i 20 e i 40 anni circa intessati ad acquistare prodotti fatti a mano e soprattutto personalizzabili con design particolari o con i propri nomi, per se stessi, la loro famigia o come regali unici. In particolare su tutti post e le descrizioni sul fatto che i prodotti dello shop sono fatti a mano e da un piccolo shop visto che l'artigianato di nicchia è in grande richiesta negli ultimi anni da questa generazione. </p>
+				<p><strong>Promozione:</strong>Sui social la promozione del brand avviene attraverso post e reel sulla pagina e indicizzati con hashtag rilevanti [come: #embrodery #ricamatoamano #madeinitaly].
+					Fuori dal web si puo creare awarness sul bran partecipando a iniziative locali dove incontrare di persona potenziali clienti [ad esempio in romagna eventi come: gypsy garden, cesare temporary store]
+					volantino<br> <img src="css/img/volantino.jpg" style="width: 40%;"> <>
+					</p>
+				<p><strong>Valutazione e risultati:</strong>
+					<img src="css/img/----">
+				</p>
+</body>
 </head>
