nuove colonne div

--- a/index.html
+++ b/index.html
@@ -64,22 +64,25 @@
 	<img src="css/img/Clothocopia.jpg"/>
 	<h2>Welcome to <b>Clotho</b> </h2>
 </section>
-<div class="container">
+			<div class="container">
  <div class="row">
- <div class="col-sm-3">
+ 	<div class="col-sm-5" style="text-align: center;">
+	<p><em><strong>Welcome to our On-Line shop!</strong></em><br> Here you will find a selection of our handmade creations to shop and customize to your liking. Just let us know anythig you wish to change an we'll be happy to try!<br>You can also ask for <em>a <strong>customized pice!</strong></em> Write a description of your requests and we'll get back to you with a draft in no time! </p>		 
+ </div>
+ <div class="col-sm-2">
 	<img src="css/img/cnosfondo.png"/>		 
  </div>
- <div class="col-sm-6">
-<br>
- 	In Greek Mythology Clotho is one of the Three Fates, the incarnations of destiny, above even the Gods in their role as enforcers of fate.<br>
+ <div class="col-sm-5" style="text-align: center;">
+<p>
+ 	In Greek Mythology <em><strong>Clotho</strong></em> is one of the Three Fates, the incarnations of destiny, above even the Gods in their role as enforcers of fate.
  	The three sisters spin the thread of life ensuring that every being lived out its destiny as it was assigned to them by the universe.<br>
- 	Clotho is the oldest of the three, the spinner, she spins life into a spintle for her sisters to use.
+ 	Clotho is the oldest of the three,<em> <strong>the spinner</strong></em>, she spins life into a spintle for her sisters to use.</p>
 
 			      
 			 </div> 
 			  </div>
 			</div>
-	
+
 
 
 <section>
