link per instagram

--- a/documentazione.html
+++ b/documentazione.html
@@ -42,7 +42,14 @@
 					volantino<br> <img src="css/img/volantino.jpg" style="width: 40%;"> <>
 					</p>
 				<p><strong>Valutazione e risultati:</strong>
-					<img src="css/img/----">
+					 <div class="col-sm-4 col-form-label"> 
+		       <a href="https://www.instagram.com/clotho_design/" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">
+		       LINK PAGINA INSTAGRAM <i class="fab fa-instagram" ></i>
+		       </a>
+			    </div>
+				</p>
+				<P>Google analytics stats:</P>
+					
 				</p>
 </body>
 </head>
