--- a/shop.html
+++ b/shop.html
@@ -14,7 +14,7 @@
 		    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script> 
 		    <link rel="stylesheet" href="css/styles.css">
 		    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-		    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		    <link rel="shortcut icon" href="fav-icon.ico" type="image/x-icon">
 			<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-1G6RZM7D2X"></script>
 <script>
